# FixPixel-Backend

./: .gitignore  README.md  main.py  pyproject.toml
configs/: database.py
controllers/: photo.py
models/: photo.py
repositories/: photo.py
schema/: photo.py
services/: photo.py
